# oozie-to-airflow

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  VMSetup.sh  codecov.yaml  generate-dependency-graph  init.sh  mypy.ini  pylintrc  pyproject.toml  requirements.txt  run-all-configuration  run-all-conversions  run-all-unit-tests  run-sys-test  run-sys-test-complete  setup.py  validate-all-workflows  validate-workflows  yamllint-config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  (+1 more)
.kokoro/: kokoro_build.sh  presubmit.cfg  run_tests.sh
.travis/: o2a-build-artifacts-sa.json.enc
dataproc/: example-map-reduce-job.sh  oozie-5.1.sh  oozie-5.2.sh
o2a/: __init__.py  definitions.py  o2a.py
o2a/o2a_libs/: LICENSE  README.md  el_basic_functions.py  el_fs_functions.py  el_parser.py  el_wf_functions.py  functions.py  property_utils.py  pyproject.toml
o2a/o2a_libs/src/: __init__.py
o2a/o2a_libs/src/o2a_lib/: functions.py  property_utils.py
oozie-to-airflow/: CONTRIBUTING.md  README.md  codecov.yaml  confirm  definintions.py  definitions.py  init.sh  o2a.py  oozie_converter.py  pyproject.toml  requirements.txt  run-all-configuration  run-all-conversions  run-all-unit-tests  run-sys-test  run-sys-test-complete  run_tests.sh  setup.py  validate-all-workflows  validate-workflows
schema/: all-schemas-1.0.xsd
scripts/: prepare.sh
tests/: test_templates.py
utils/: configuration.template.properties
(+458 files in other folders)
